# dropit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  biome.json  compose.yml  justfile  pyproject.toml
.forgejo/workflows/: ci.yml  release.yml
app/: auth.py  banner.py  cleanup.py  database.py  dependencies.py  errors.py  lifecycle.py  limiter.py  logging.py  main.py  middleware.py  models.py  serializers.py  settings.py  token_ops.py  utils.py  validators.py
app/routers/: admin.py  collections.py  config.py  health.py  landing.py  me.py  pages.py  upload.py  users.py
app/static/: admin.html  error.html  index.html  landing.html
app/static/css/: admin.css  base.css  design-tokens.css  error.css  files.css  fonts.css  index.css  responsive.css
app/static/js/: admin.js  api.js  auth.js  files.js  index.js  pages-table.js  token-modal.js  token-shared.js  utils.js
app/templates/: admin.html  base.html  error.html  files.html  index.html  macros.html
docs/superpowers/plans/: 2026-05-21-dropit.md
tests/: conftest.py  test_admin.py  test_auth.py  test_cleanup.py  test_collections.py  test_config.py  test_database.py  test_errors.py  test_health.py  test_landing.py  test_logging.py  test_me.py  test_pages.py  test_settings.py  test_static.py  test_upload.py  test_users.py  test_utils.py
